# fidlmac

./: README.md
fidl/: CMakeLists.txt
src/c/: checkOS.c  checkOS.h  cifti_getDimensions.cxx  cifti_getDimensions.h  constants.h  d2charvar.c  d2charvar.h  fidl.h  fidl_vox_ass.cxx  file.cxx  file.h  filetype.c  filetype.h  header.cxx  header.h  ifh.h  interfile.c  nifti_flipslice.cxx  nifti_flipslice.h  nifti_gethdr.cxx  nifti_gethdr.h  shouldiswap.c  shouldiswap.h  stack.cxx  stack.h  strutil.c  strutil.h  subs_nifti.cxx  subs_nifti.h  subs_util.c  subs_util.h
